--- a/index.html
+++ b/index.html
@@ -1,10 +1,100 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Nerds</title>
 </head>
 <body>
-    my first site
+    <header>
+        <nav>
+            <a href="index.html"><img src="logo.png" alt="логотип"></a>
+            <ul>
+                <li><a href="blank.html">Студия</a></li>
+                <li><a href="blank.html">Клиенты</a></li>
+                <li><a href="inner.html">Магазин</a></li>
+                <li><a href="blank.html">Контакты</a></li>
+            </ul>
+            <a href="blank.html">Корзина</a>
+        </nav>
+    </header>
+
+<main>
+    <h1>Nerds. Магазин готовых шаблонов</h1>
+    <section>
+        <h2>Описание</h2>
+        <p>Долго, дорого, скрупулезно</p>
+        <p>Математически вывереный дизайн <br>
+        для вашего сайта или мобильного приложения</p>
+        <a href="blank.html">Узнать больше</a>
+    </section>
+    <section>
+        <h2>Преимущества</h2>
+        <ul>
+            <li>
+                <img src="#" alt="site-icon">
+                <h3>Веб-сайты</h3>
+                <p>Мир никогда не будеьт прежним<br>
+                после того как увидит ваш сайт!</p>
+                <a href="blank.html">Заказать</a>
+            </li>
+            <li>
+                <img src="#" alt="app-icon">
+                <h3>Приложения</h3>
+                <p>Покорите топ-10 приложений в <br>
+                AppStore и GooglePlay</p>
+                <a href="blank.html">Заказать</a>
+            </li>
+            <li>
+                <img src="#" alt="presentation-icon">
+                <h3>Презентации</h3>
+                <p>Вы даже не подозреваете,<br>
+                Насколько вы изумительны!</p>
+                <a href="blank.html">Заказать</a>
+            </li>
+        </ul>
+    </section>
+    <section>
+        <h2>О нас</h2>
+        <p>Мы маленькая, но гордая дизайн-студия из Комсомольска-на-Амуре</p>
+        <p>Исповедуем принципы минимализма и чистоты. Ставим математический расчёт превыше креатива.
+            Работаем не покладая рук, как роботы</p>
+        <p>Выполняем заказы на разработку:
+        <ul>
+            <li>Веб-сайтов любой сложности</li>
+            <li>Мобильных приложений для IOS и Android</li>
+            <li>Слфйдшоу и видео для корпоративных презентаций</li>
+        </ul>
+        </p>
+        <p>
+            С 2004 года любим точность во всем:
+            <u>
+                <li>146% уровень самоотдачи</li>
+                <li>100% соблюдение сроков</li>
+                <li>50% Минимальная предоплата</li>
+            </u>
+        </p>
+    </section>
+    <section>
+        <h2>Наши партнеры</h2>
+        <ul>
+            <li><a href="https://htmlacademy.ru"><img src="#" alt="https://htmlacademy.ru"></a></li>
+            <li><a href="#"><img src="#" alt="Барбершоп бородинский"></a></li>
+            <li><a href="#"><img src="#" alt="Pink"></a></li>
+            <li><a href="#"><img src="#" alt="Mishka"></a></li>
+        </ul>
+    </section>
+    <section>
+        <h2>Карта</h2>
+    </section>
+</main>
+<footer>
+    <ul>
+        <li><a href="#"><img src="#" alt="Вконтакте"</a></li>
+        <li><a href="#"><img src="#" alt="Фейсбук"</a></li>
+        <li><a href="#"><img src="#" alt="Инстаграмм"</a></li>
+    </ul>
+    <p>Давайте дружить, это выгодно!</p>
+    <p>Скидка 10% для друзей из социальных сетей</p>
+</footer>
 </body>
 </html>
