разметил страницу магазина

--- a/index.html
+++ b/index.html
@@ -58,21 +58,20 @@
         <p>Мы маленькая, но гордая дизайн-студия из Комсомольска-на-Амуре</p>
         <p>Исповедуем принципы минимализма и чистоты. Ставим математический расчёт превыше креатива.
             Работаем не покладая рук, как роботы</p>
-        <p>Выполняем заказы на разработку:
+        Выполняем заказы на разработку:
         <ul>
             <li>Веб-сайтов любой сложности</li>
             <li>Мобильных приложений для IOS и Android</li>
             <li>Слфйдшоу и видео для корпоративных презентаций</li>
         </ul>
-        </p>
-        <p>
+  
             С 2004 года любим точность во всем:
-            <u>
+            <ul>
                 <li>146% уровень самоотдачи</li>
                 <li>100% соблюдение сроков</li>
                 <li>50% Минимальная предоплата</li>
-            </u>
-        </p>
+            </ul>
+     
     </section>
     <section>
         <h2>Наши партнеры</h2>
@@ -89,9 +88,9 @@
 </main>
 <footer>
     <ul>
-        <li><a href="#"><img src="#" alt="Вконтакте"</a></li>
-        <li><a href="#"><img src="#" alt="Фейсбук"</a></li>
-        <li><a href="#"><img src="#" alt="Инстаграмм"</a></li>
+        <li><a href="#"><img src="#" alt="Вконтакте"></a></li>
+        <li><a href="#"><img src="#" alt="Фейсбук"></a></li>
+        <li><a href="#"><img src="#" alt="Инстаграмм"></a></li>
     </ul>
     <p>Давайте дружить, это выгодно!</p>
     <p>Скидка 10% для друзей из социальных сетей</p>
