--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             <ul>
                 <li><a href="blank.html">Студия</a></li>
                 <li><a href="blank.html">Клиенты</a></li>
-                <li><a href="inner.html">Магазин</a></li>
+                <li><a href="store.html">Магазин</a></li>
                 <li><a href="blank.html">Контакты</a></li>
             </ul>
             <a href="blank.html">Корзина</a>
