сделал ссылку Gloevk

--- a/store.html
+++ b/store.html
@@ -60,6 +60,15 @@
                 <button>9900 руб.</button>
              
             </article></li>
+            <li><article><a href="project-gloevk/index.html">
+                <img src="#" alt="Gloevk">
+                <h3>Gloevk</h3>
+                <p>Сайт товаров для дома</p>
+                <button>9900 руб.</button>
+            </a>
+
+
+            </article></li>
             <li><article>
                 <img src="#" alt="pink">
                     <h3>Pink</h3>
