--- a/store.html
+++ b/store.html
@@ -2,7 +2,7 @@
 <html lang="ru">
     <head>
         <meta charset="UTF-8">
-        <title>Nerds</title>
+        <title>Nerds store</title>
     </head>
     <body>
 <header>
@@ -114,5 +114,25 @@
     <p>Давайте дружить, это выгодно!</p>
     <p>Скидка 10% для друзей из социальных сетей</p>
 </footer>
+<section>
+    <h2>Напишите нам</h2>
+    <button type="button">Закрыть</button>
+    <form method="post" action="/echo">
+        <p>
+            <label>Ваше имя: <input type="text" name="name"
+                placeholder="Имя Фамилия"></label>
+        </p>
+        <p>
+            <label>Ваш e-mail:<input type="email" name="email" 
+                placeholder="email@example.com"></label>
+        </p>
+        <p>
+            <label>Текст письма:
+                <textarea placeholder="В свободной форме"></textarea>
+            </label>
+        </p>
+        <button type="submit">Отправить</button>
+    </form>
+</section>
 </body>
 </html>
